<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/whatsapp_image_2024_03_12_at_14_26_45"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/information"
        android:layout_width="353dp"
        android:layout_height="256dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="352dp"
        android:fontFamily="@font/abeezee"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.434"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/theHistoryApp"
        app:layout_constraintVertical_bias="0.676" />

    <TextView
        android:id="@+id/theHistoryApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/amarante"
        android:text="The History App"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="147dp"
        android:layout_height="78dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="45dp"
        android:text="GENERATE ANSWER"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberAge"
        app:layout_constraintVertical_bias="0.518" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="148dp"
        android:layout_height="74dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/abeezee"
        android:text="CLEAR"
        android:textColorHighlight="#191717"
        android:textColorLink="#121111"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toEndOf="@+id/btn1"
        app:layout_constraintTop_toBottomOf="@+id/numberAge"
        app:layout_constraintVertical_bias="0.482" />

    <EditText
        android:id="@+id/numberAge"
        android:layout_width="198dp"
        android:layout_height="63dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="510dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="158dp"
        android:ems="10"
        android:inputType="number"
        android:text=":"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/enterAge"
        android:layout_width="122dp"
        android:layout_height="84dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="88dp"
        android:ems="10"
        android:fontFamily="@font/amaranth"
        android:inputType="text"
        android:text="Enter Age "
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/information"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>